🚔✌️ Checkpoint ./about.html:41497361/930 ./port.html:41497361/932 ./game.html:41497361/934 ./index.html:41497361/141

--- a/port.html
+++ b/port.html
@@ -13,7 +13,7 @@
       HEADER
       <nav>
         <a href="about.html">About Me</a>
-        <a href="port.html">Portfolio</a>
+        <a href="index.html">Home</a>
         <a href="game.html">Play My Game!</a>
       </nav>
     </header>
