--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header>
       HEADER
       <nav>
-        <a href="about.html">About Me</a>
+        <a href="index.html">Home</a>
         <a href="port.html">Portfolio</a>
         <a href="game.html">Play My Game!</a>
       </nav>
