--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
       <nav>
         <a href="about.html">About Me</a>
         <a href="port.html">Portfolio</a>
-        <a href="game.html">Play My Game!</a>
+        <a href="index.html">Home</a>
       </nav>
     </header>
     <main>MAIN CONTENT</main>
