--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>TITLE</title>
-    <meta name="description" content="DESCRIPTION" />
-    <meta name="author" content="AUTHOR" />
+    <title>Main Menu - Welcome!</title>
+    <meta name="description" content="The main page" />
+    <meta name="author" content="Pedro M. Gonzalez" />
     <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="stylesheet" href="styles.css" />
   </head>
