🌦🌔 Checkpoint ./index.html:41497361/21

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script>
           document.write(new Date().getFullYear());
         </script>
-        NAME All Rights Reserved
+        Pedro M. Gonzalez All Rights Reserved
       </p>
     </footer>
   </body>
