🚶🎑 Checkpoint ./.glitch-assets:41497361/2453 ./game.html:41497361/598 ./index.html:41497361/925 ./style.css:41497361/1526

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <header>
       HEADER
       <nav>
-        <a href="about.html">About Me</a>
-        <a href="port.html">Portfolio</a>
-        <a href="game.html">Play My Game!</a>
+        <div id="menu">
+        <a href="about.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
+        <a href="port.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a>
+        <a href="game.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
+        </div>
       </nav>
     </header>
     <main>MAIN CONTENT</main>
