--- a/about.html
+++ b/about.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>About Me! - And Other Facts</title>
-    <meta name="description" content="DESCRIPTION" />
-    <meta name="author" content="AUTHOR" />
-    <link rel="icon" type="image/png" href="favicon.ico" />
+    <meta name="description" content="The main page" />
+    <meta name="author" content="Pedro M. Gonzalez" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital@0;1&family=Staatliches&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
