--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
       HEADER
       <nav>
-        <a class="menu" href="about.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
-        <a class="menu" href="port.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a>
-        <a class="menu" href="game.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
+        <a class="🍐" href="about.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
+        <a class="🍐" href="port.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a>
+        <a class="🍐" href="game.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
       </nav>
     </header>
     <main>MAIN CONTENT</main>
