--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
   </head>
   <body>
     <header>
-      HEADER
+      <h1 class="🍏">
+        WELCOME!
+      </h1>
       <nav>
-        <a class="🍐" href="about.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
-        <a class="🍐" href="port.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a>
-        <a class="🍐" href="game.html"><img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
+        <a href="about.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
+        <a href="port.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a><br />
+        <a href="game.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
       </nav>
     </header>
     <main>MAIN CONTENT</main>
