--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Main Menu - Welcome!</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,16 +21,30 @@
   </head>
   <body>
     <header>
-      <h1 class="🍏">
-        WELCOME!
-      </h1>
+      <h1 class="🍏">WELCOME!</h1>
       <nav>
-        <a href="about.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753" alt="About Me"></a>
-        <a href="port.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407" alt="Portfolio"></a><br />
-        <a href="game.html"><img class="🍐" src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817" alt="Play My Game!"></a>
+        <a href="about.html"
+          ><img
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753"
+            alt="About Me"
+        /></a>
+        <a href="port.html"
+          ><img
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407"
+            alt="Portfolio" /></a
+        ><br />
+        <a href="game.html"
+          ><img
+            class="🍐"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817"
+            alt="Play My Game!"
+        /></a>
       </nav>
     </header>
-    <main>MAIN CONTENT</main>
+    <main>
+<marquee class="GeneratedMarquee 🍏" direction="left" scrollamount="10" behavior="scroll">Here's What's New ...</marquee></main>
     <footer>
       <p>
         Copyright ©
