🏚💴 Checkpoint ./styles.css:41497361/466 ./index.html:41497361/18

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
 <marquee class="GeneratedMarquee 🍏" direction="left" scrollamount="10" behavior="scroll">Here's What's New ...</marquee></main>
     <footer>
-      <p>
+      <p class="copyright">
         Copyright ©
         <script>
           document.write(new Date().getFullYear());
