🐉📇 Checkpoint ./index.html:41497361/634 ./styles.css:41497361/620

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </head>
   <body>
     <header>
-      <h1 class="🍏">WELCOME!</h1>
+      <h1 class="🍏" >WELCOME!</h1>
+      <h1 class="🍏">Pedro M. GONZALEZ</h1>
       <nav>
         <a href="about.html"
           ><img
@@ -44,7 +45,7 @@
       </nav>
     </header>
     <main>
-<marquee class="GeneratedMarquee 🍏" direction="left" scrollamount="10" behavior="scroll">Here's What's New ...</marquee></main>
+<marquee class="GeneratedMarquee" direction="left" scrollamount="10" behavior="scroll">Here's What's New ...</marquee></main>
     <footer>
       <p class="copyright">
         Copyright ©
