🍰🛩 Checkpoint ./index.html:41497361/3953 ./styles.css:41497361/739 ./.glitch-assets:41497361/1450

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Main Menu - Welcome!</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
       type="image/png"
@@ -44,7 +44,14 @@
       </nav>
     </header>
     <main>
-<marquee class="GeneratedMarquee" direction="left" scrollamount="10" behavior="scroll">Here's What's New ...</marquee></main>
+      <marquee
+        class="GeneratedMarquee"
+        direction="left"
+        scrollamount="10"
+        behavior="scroll"
+        >Here's What's New ...</marquee
+      >
+    </main>
     <footer>
       <p class="copyright">
         Copyright ©
