👗🕶 Checkpoint ./index.html:41497361/5113 ./styles.css:41497361/430 ./.glitch-assets:41497361/395

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
   </head>
   <body>
     <header>
+      <div class="pageheader">
+        <div class="hero-text">
+          <h1 style="font-size: 50px">I am John Doe</h1>
+          <p>And I'm a Photographer</p>
+          <button>Hire me</button>
+        </div>
+      </div>
       <h1 class="🍏">WELCOME!</h1>
       <nav>
         <a href="about.html"
