💁⛲️ Checkpoint ./index.html:41497361/5998 ./styles.css:41497361/97

--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
   </head>
   <body>
     <header>
-      <div class="pageheader">
-        <div class="hero-text">
-          <h1 style="font-size: 50px">I am John Doe</h1>
-          <p>And I'm a Photographer</p>
-          <button>Hire me</button>
-        </div>
-      </div>
+      <div class="🌮"></div>
       <h1 class="🍏">WELCOME!</h1>
+    </header>
+    <main>
       <nav>
         <a href="about.html"
           ><img
@@ -49,8 +45,8 @@
             alt="Play My Game!"
         /></a>
       </nav>
-    </header>
-    <main>
+    </main>
+    <footer>
       <marquee
         class="GeneratedMarquee"
         direction="left"
@@ -58,8 +54,6 @@
         behavior="scroll"
         >Here's What's New ...</marquee
       >
-    </main>
-    <footer>
       <p class="copyright">
         Copyright ©
         <script>
