--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
   </head>
   <body>
     <header>
-      <div class="🌮"><img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
-            alt="The Taco Stand"/></div>
+      <div>
+        <img class="🌮"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+          alt="The Taco Stand"
+        />
+      </div>
       <h1 class="🍏">WELCOME!</h1>
     </header>
     <main>
