🍧🍣 Checkpoint ./index.html:41497361/4992 ./styles.css:41497361/101

--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
   <body>
     <header>
       <div>
-        <img class="🌮"
+        <img
+          class="🌮"
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
           alt="The Taco Stand"
         />
       </div>
-      <h1 class="🍏">WELCOME!</h1>
     </header>
     <main>
+      <h1 class="🍏">WELCOME!</h1>
       <nav>
         <a href="about.html"
           ><img
@@ -52,20 +53,22 @@
       </nav>
     </main>
     <footer>
-      <marquee
-        class="GeneratedMarquee"
-        direction="left"
-        scrollamount="10"
-        behavior="scroll"
-        >Here's What's New ...</marquee
-      >
-      <p class="copyright">
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        Pedro M. Gonzalez All Rights Reserved
-      </p>
+      <div class="🍗">
+        <marquee
+          class="GeneratedMarquee"
+          direction="left"
+          scrollamount="10"
+          behavior="scroll"
+          >Here's What's New ...</marquee
+        >
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Pedro M. Gonzalez All Rights Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
