--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           ><img
             class="🍐"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407"
-            alt="Portfolio" /></a
-        ><br />
+            alt="Portfolio"
+        /></a>
         <a href="game.html"
           ><img
             class="🍐"
