--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
       </div>
     </header>
     <main>
-      <h1 class="🍏">WELCOME!</h1>
+      <h1 class="shake 🍏">WELCOME!</h1>
       <nav>
         <a href="about.html"
           ><img
-            class="🍐"
+            class="🍐 shake"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPHD.png?v=1650411046753"
             alt="About Me"
         /></a>
         <a href="port.html"
           ><img
-            class="🍐"
+            class="🍐 shake"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPFD.png?v=1650411050407"
             alt="Portfolio"
         /></a>
         <a href="game.html"
           ><img
-            class="🍐"
+            class="🍐 shake"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TEMPGB.png?v=1650411041817"
             alt="Play My Game!"
         /></a>
