--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main>
-      <h1 class="shake 🍏">WELCOME!</h1>
+      <h1 class="🍏">WELCOME!</h1>
       <nav>
         <a href="about.html"
           ><img
