🌌🍨 Checkpoint ./styles.css:41497361/12433 ./index.html:41497361/23528

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
       <nav>
         <a href="about.html"
           ><img
-            class="🍐 shake"
+            class="🍐 shake main"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+            alt="About Me"
+        /><img
+            class="🍐 shake glow"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
             alt="About Me"
         /></a>
