🍥🎢 Checkpoint ./styles.css:41497361/193 ./index.html:41497361/6040

--- a/index.html
+++ b/index.html
@@ -36,23 +36,25 @@
           ><img
             class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
-            alt="About Me"
-        /><img
+            alt="About Me" /><img
             class="🍐 shake glow"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
-            alt="About Me"
         /></a>
         <a href="port.html"
           ><img
-            class="🍐 shake"
+            class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
-            alt="Portfolio"
+            alt="Portfolio" /><img
+            class="🍐 shake glow"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
         /></a>
         <a href="game.html"
           ><img
-            class="🍐 shake"
+            class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
-            alt="Play My Game!"
+            alt="Play My Game!" /><img
+            class="🍐 shake glow"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
         /></a>
       </nav>
     </main>
