--- a/index.html
+++ b/index.html
@@ -34,19 +34,28 @@
       <nav>
         <a href="about.html"
           ><img
-            class="🍐 shake"
+            class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
-            alt="About Me" /></a>
+            alt="About Me" /><img
+            class="🍐 shake glow"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+        /></a>
         <a href="port.html"
           ><img
-            class="🍐 shake "
+            class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
-            alt="Portfolio" /></a>
+            alt="Portfolio" /><img
+            class="🍐 shake glow"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
+        /></a>
         <a href="game.html"
           ><img
-            class="🍐 shake "
+            class="🍐 shake main"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
-            alt="Play My Game!" /></a>
+            alt="Play My Game!" /><img
+            class="🍐 shake glow"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
+        /></a>
       </nav>
     </main>
     <footer>
