💓🐒 Checkpoint ./index.html:41497361/75 ./styles.css:41497361/787

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
       <nav>
         <a href="about.html"
           ><img
-            class="🍐 shake"
+            class="🍐 🌀"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
             alt="About Me" /></a>
         <a href="port.html"
           ><img
-            class="🍐 shake"
+            class="🍐 🌀"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
             alt="Portfolio" /></a>
         <a href="game.html"
           ><img
-            class="🍐 shake "
+            class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
-            alt="Play My Game!" /> <h2 class>
-          Play My game!
+            alt="Play My Game!" /> <h2 class="🍎 🌕">
+          Play My Game!
           </h2></a>
       </nav>
     </main>
