--- a/index.html
+++ b/index.html
@@ -34,14 +34,18 @@
       <nav>
         <a href="about.html"
           ><img
-            class="🍐 🌀"
+            class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
-            alt="About Me" /></a>
+            alt="About Me" /><h2 class="🍎 🌕">
+          Learn About Me!
+          </h2></a>
         <a href="port.html"
           ><img
-            class="🍐 🌀"
+            class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
-            alt="Portfolio" /></a>
+            alt="Portfolio" /><h2 class="🍎 🌕">
+          My Portfolio!
+          </h2></a>
         <a href="game.html"
           ><img
             class="🍐 🌀 🌑"
