--- a/index.html
+++ b/index.html
@@ -31,26 +31,27 @@
     </header>
     <main>
       <h1 class="🍏">WELCOME!</h1>
+      <h2 class="🍎">Select A Menu Option To Continue...</h2>
       <nav>
         <a href="about.html"
           ><img
             class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
-            alt="About Me" /><h2 class="🍎 🌕">
+            alt="About Me" /><h2 class="🔍 🌕">
           Learn About Me!
           </h2></a>
         <a href="port.html"
           ><img
             class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
-            alt="Portfolio" /><h2 class="🍎 🌕">
+            alt="Portfolio" /><h2 class="🔍 🌕">
           My Portfolio!
           </h2></a>
         <a href="game.html"
           ><img
             class="🍐 🌀 🌑"
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
-            alt="Play My Game!" /> <h2 class="🍎 🌕">
+            alt="Play My Game!" /> <h2 class="🔍 🌕">
           Play My Game!
           </h2></a>
       </nav>
