--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           direction="left"
           scrollamount="10"
           behavior="scroll"
-          >Here's What's New ...</marquee
+          >Here's What's New ... 
+        
+        </marquee
         >
         <p class="copyright">
           Copyright ©
