😬👦 Checkpoint ./index.html:41497361/685 ./styles.css:41497361/254

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
           alt="The Taco Stand"
         />
+        <img
+          class="X"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+          alt="The Taco Stand"
+        />
       </div>
     </header>
     <main>
@@ -64,7 +69,7 @@
         <marquee
           class="GeneratedMarquee"
           direction="left"
-          scrollamount="10"
+          scrollamount="7"
           behavior="scroll"
           >Here's What's New ... 
         
