--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <header>
       <div>
         <img
+          class="🌯"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner%202.png?v=1652751620534"
+        />
+        <img
           class="🌮"
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
           alt="The Taco Stand"
