--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div>
-        <a href="about.html"><img
+        <a href="index.html"><img
           class="🌮"
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
           alt="The Taco Stand"
