--- a/index.html
+++ b/index.html
@@ -61,17 +61,26 @@
       </nav>
     </main>
     <footer>
-      <div class="slideshow-container">
+      <div class="slideshow-container" style="margin-top: 88px">
         <div class="mySlides fade">
-          <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465" style="width: 100%" />
+          <img
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+            style="width: 100%"
+          />
         </div>
 
         <div class="mySlides fade">
-          <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036" style="width: 100%" />
+          <img
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
+            style="width: 100%"
+          />
         </div>
 
         <div class="mySlides fade">
-          <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936" style="width: 100%" />
+          <img
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
+            style="width: 100%"
+          />
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">❮</a>
