⚾️⛪️ Checkpoint ./about.html:41497361/795

--- a/about.html
+++ b/about.html
@@ -16,22 +16,26 @@
   </head>
   <body>
     <header>
-      HEADER
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="port.html">Portfolio</a>
-        <a href="game.html">Play My Game!</a>
-      </nav>
+      <div>
+        <a href="index.html"
+          ><img
+            class="🌮"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+            alt="The Taco Stand"
+        /></a>
+      </div>
     </header>
     <main>MAIN CONTENT</main>
     <footer>
-      <p>
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        NAME All Rights Reserved
-      </p>
+      <div class="🍗">
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Pedro M. Gonzalez All Rights Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
