💧👱 Checkpoint ./.glitch-assets:41497361/378 ./about.html:41497361/1078 ./styles.css:41497361/7232

--- a/about.html
+++ b/about.html
@@ -25,7 +25,17 @@
         /></a>
       </div>
     </header>
-    <main>MAIN CONTENT</main>
+    <main>
+      <h1 class="🍏">ABOUT ME!</h1>
+      <div>
+        <a 
+          ><img
+            class="🐔"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SELFIE.png?v=1652769134909"
+            alt="Picture of Myself"
+        /></a>
+      </div>
+    </main>
     <footer>
       <div class="🍗">
         <p class="copyright">
