🏂🌟 Checkpoint ./about.html:41497361/9 ./styles.css:41497361/1863

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SELFIE.png?v=1652769134909"
             alt="Picture of Myself"
         /></a>
-        <h1 class="🍊">ABOUT ME!My name is Pedro! another alias I go by is Taco.
+        <h1 class="🍊">My name is Pedro! another alias I go by is Taco.
 I'm a Puerto Rican artist that's born in NY in '00. I'm inspired by retro pop art and mid century modern graphic design.
 Think of the likes of Keith Haring and Derek Yaniger. When not working with digital art, the other medium I enjoy is acrylics!
 When not working or learning new skills, I'm playing games with my friends or going out and enjoying the world!
