🍄🛣 Checkpoint ./about.html:41497361/149

--- a/about.html
+++ b/about.html
@@ -37,9 +37,7 @@
         <h2 class="🍊">My name is Pedro! another alias I go by is Taco.
  My name is Pedro! another alias I go by is Taco.
         <br />I'm a Puerto Rican artist that's born in NY in '00. I'm inspired
-        by retro pop art and mid century modern graphic design. <br />Think of
-        the likes of Keith Haring and Derek Yaniger. When not working with
-        digital art, the other medium I enjoy is acrylics!
+        by retro pop art and mid century modern graphic design.
         <br />
         When not working or learning new skills, I'm playing games with my
         friends or going out and enjoying the world! <br />
