🏚⛄️ Checkpoint ./styles.css:41497361/16731 ./about.html:41497361/48 ./port.html:41497361/12401

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SELFIE.png?v=1652769134909"
             alt="Picture of Myself"
         /></a>
-        <h2 class="🍊">My name is Pedro! another alias I go by is Taco.
+        <h2 class="🍊">
  My name is Pedro! another alias I go by is Taco.
         <br />I'm a Puerto Rican artist that's born in NY in '00. I'm inspired
         by retro pop art and mid century modern graphic design.
