--- a/port.html
+++ b/port.html
@@ -5,7 +5,11 @@
     <title>The Portfolio - Enjoy!</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +27,83 @@
         <a href="game.html">Play My Game!</a>
       </nav>
     </header>
-    <main>MAIN CONTENT</main>
+    <main>
+      <div id="gallery">
+        <img src="img1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+      </div>
+      
+      <!-- The Modal/Lightbox -->
+      <div id="myModal" class="modal">
+        <span class="close cursor" onclick="closeModal()">&times;</span>
+        <div class="modal-content">
+          <div class="mySlides">
+            <div class="numbertext">1 / 4</div>
+            <img src="img1_wide.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">2 / 4</div>
+            <img src="img2_wide.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">3 / 4</div>
+            <img src="img3_wide.jpg" style="width: 100%" />
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">4 / 4</div>
+            <img src="img4_wide.jpg" style="width: 100%" />
+          </div>
+
+          <!-- Next/previous controls -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+          <!-- Caption text -->
+          <div class="caption-container">
+            <p id="caption"></p>
+          </div>
+
+          <!-- Thumbnail image controls -->
+          <div class="column">
+            <img
+              class="demo"
+              src="img1.jpg"
+              onclick="currentSlide(1)"
+              alt="Nature"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="img2.jpg"
+              onclick="currentSlide(2)"
+              alt="Snow"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="img3.jpg"
+              onclick="currentSlide(3)"
+              alt="Mountains"
+            />
+          </div>
+
+          <div class="column">
+            <img
+              class="demo"
+              src="img4.jpg"
+              onclick="currentSlide(4)"
+              alt="Lights"
+            />
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <p>
         Copyright ©
