🗼🌛 Checkpoint ./port.html:41497361/13292 ./.glitch-assets:41497361/1175

--- a/port.html
+++ b/port.html
@@ -20,30 +20,221 @@
   </head>
   <body>
     <header>
-      HEADER
       <nav>
-        <a href="about.html">About Me</a>
-        <a href="index.html">Home</a>
-        <a href="game.html">Play My Game!</a>
+        <a href="index.html"
+          ><img
+            class="🌮"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+            alt="The Taco Stand"
+        /></a>
       </nav>
     </header>
     <main>
+      <h1 class="🍏">MY PORTFOLIO!</h1>
       <div id="gallery">
-        <img src="img1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+        <img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bean.png?v=1652822609429"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><img
+          src="img1.jpg"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        />
       </div>
-      
+
       <!-- The Modal/Lightbox -->
       <div id="myModal" class="modal">
         <span class="close cursor" onclick="closeModal()">&times;</span>
         <div class="modal-content">
           <div class="mySlides">
             <div class="numbertext">1 / 4</div>
-            <img src="img1_wide.jpg" style="width: 100%" />
+            <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544" style="width: 100%" />
           </div>
 
           <div class="mySlides">
             <div class="numbertext">2 / 4</div>
-            <img src="img2_wide.jpg" style="width: 100%" />
+            <img src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260" style="width: 100%" />
           </div>
 
           <div class="mySlides">
@@ -69,16 +260,16 @@
           <div class="column">
             <img
               class="demo"
-              src="img1.jpg"
+              src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
               onclick="currentSlide(1)"
-              alt="Nature"
+              alt="Adam"
             />
           </div>
 
           <div class="column">
             <img
               class="demo"
-              src="img2.jpg"
+              src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
               onclick="currentSlide(2)"
               alt="Snow"
             />
