🎱🏈 Checkpoint ./.glitch-assets:41497361/11190 ./port.html:41497361/4507

--- a/port.html
+++ b/port.html
@@ -45,111 +45,117 @@
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bike_Final_Poster.png?v=1652822836502"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Brochure_final-01.png?v=1652822856301"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CASUAL_MOUTH.gif?v=1652822879699"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/E710B9C5-878C-4302-B5A8-D4756400864E.mp4?v=1652822945107"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Flynn_CommV1.2.png?v=1652823024399"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_Logo.png?v=1652823039789"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_LogoB.png?v=1652823054154"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Illustration2.png?v=1652823069045"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0945.png?v=1652823087495"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0948.png?v=1652823083286"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0949.png?v=1652823114761"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0950.png?v=1652823133156"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0951.png?v=1652823150671"
+          onclick="openModal();currentSlide(1)"
+          class="hover-shadow"
+        /><video width="320" height="320" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153896.881606.mp4?v=1652823218527"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video><video width="360" height="640" controls>
+          <source
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ImportVideo_153934.006721.mp4?v=1652823280399"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video><img
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Kirby_Gym_Shirts.png?v=1652823328913"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/limeupA.png?v=1652823346204"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Living_Color_TShirt.png?v=1652823360498"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MM.png?v=1652823399330"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Mooby_FB.png?v=1652823413575"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Party_Poster_F2.png?v=1652823431692"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Pearl.png?v=1652823452752"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_150.png?v=1652823470193"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_151.png?v=1652823487145"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
-          class="hover-shadow"
-        /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
-          class="hover-shadow"
-        /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
-          class="hover-shadow"
-        /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
-          class="hover-shadow"
-        /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
-          class="hover-shadow"
-        /><img
-          src="img1.jpg"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_152.png?v=1652823505562"
           onclick="openModal();currentSlide(1)"
           class="hover-shadow"
         /><img
