--- a/port.html
+++ b/port.html
@@ -38,23 +38,23 @@
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/AP_CommissonFINAL.png?v=1652822603260"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(2)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bean.png?v=1652822609429"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(3)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Bike_Final_Poster.png?v=1652822836502"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(4)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Brochure_final-01.png?v=1652822856301"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(5)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/CASUAL_MOUTH.gif?v=1652822879699"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(6)"
           class="hover-shadow"
         /><video width="320" height="320" controls>
           <source
@@ -64,39 +64,39 @@
           Your browser does not support the video tag.
         </video><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Flynn_CommV1.2.png?v=1652823024399"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(7)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_Logo.png?v=1652823039789"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(8)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Glitter_Core_LogoB.png?v=1652823054154"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(9)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Illustration2.png?v=1652823069045"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(10)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0945.png?v=1652823087495"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(11)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0948.png?v=1652823083286"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(12)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0949.png?v=1652823114761"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(13)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0950.png?v=1652823133156"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(14)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/IMG_0951.png?v=1652823150671"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(15)"
           class="hover-shadow"
         /><video width="320" height="320" controls>
           <source
@@ -112,119 +112,119 @@
           Your browser does not support the video tag.
         </video><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(16)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Kirby_Gym_Shirts.png?v=1652823328913"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(17)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/limeupA.png?v=1652823346204"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(18)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Living_Color_TShirt.png?v=1652823360498"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(19)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Me_Gif2.png?v=1652823377807"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(20)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/MM.png?v=1652823399330"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(21)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Mooby_FB.png?v=1652823413575"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(22)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Party_Poster_F2.png?v=1652823431692"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(23)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Pearl.png?v=1652823452752"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(24)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_150.png?v=1652823470193"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(25)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_151.png?v=1652823487145"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(26)"
           class="hover-shadow"
         /><img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_152.png?v=1652823505562"
-          onclick="openModal();currentSlide(1)"
+          onclick="openModal();currentSlide(27)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_153.png?v=1652823542400"
+          onclick="openModal();currentSlide(28)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_154.png?v=1652823557044"
+          onclick="openModal();currentSlide(29)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Screenshot_155.png?v=1652823570664"
+          onclick="openModal();currentSlide(30)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Banner_ORG.png?v=1652823585886"
+          onclick="openModal();currentSlide(31)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Invites.png?v=1652823600226"
+          onclick="openModal();currentSlide(32)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SEND_COPY_Server_Logo_REG.png?v=1652823614125"
+          onclick="openModal();currentSlide(33)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Server_Logo_Template.png?v=1652823636358"
+          onclick="openModal();currentSlide(34)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/SPOILER_unknown.png?v=1652823653957"
+          onclick="openModal();currentSlide(35)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/St._Patricks_Party.png?v=1652823670510"
+          onclick="openModal();currentSlide(36)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/tjfinal.png?v=1652823686209"
+          onclick="openModal();currentSlide(37)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TP.png?v=1652823704236"
+          onclick="openModal();currentSlide(38)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/TRHS2.png?v=1652823723955"
+          onclick="openModal();currentSlide(39)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/unkndfcown.png?v=1652823739543"
+          onclick="openModal();currentSlide(40)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Us.png?v=1652823756788"
+          onclick="openModal();currentSlide(41)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/VILX-WR.png?v=1652823770903"
+          onclick="openModal();currentSlide(42)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Wigi.png?v=1652823788289"
+          onclick="openModal();currentSlide(43)"
           class="hover-shadow"
         /><img
-          src="img1.jpg"
-          onclick="openModal();currentSlide(1)"
+          src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/YUNQUELOGO.png?v=1652823802276"
+          onclick="openModal();currentSlide(44)"
           class="hover-shadow"
         />
       </div>
@@ -302,13 +302,15 @@
       </div>
     </main>
     <footer>
-      <p>
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        NAME All Rights Reserved
-      </p>
+       <div class="🍗">
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Pedro M. Gonzalez All Rights Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
