🌜⏱ Checkpoint ./port.html:41497361/21885 ./index.html:41497361/189

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="slideshow-container" style="margin-top: 88px">
         <div class="mySlides fade">
           <img
-            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/JD_POSTER_SNUGF2.png?v=1652823313066"
             style="width: 100%"
           />
         </div>
