💖👠 Checkpoint ./index.html:41497361/550 ./styles.css:41497361/10 ./port.html:41497361/374 ./about.html:41497361/184 ./game.html:41497361/1282

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <title>Mooby's Misadventures</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,22 +16,27 @@
   </head>
   <body>
     <header>
-      HEADER
-      <nav>
-        <a href="about.html">About Me</a>
-        <a href="port.html">Portfolio</a>
-        <a href="index.html">Home</a>
-      </nav>
+      <div>
+        <a href="index.html"
+          ><img
+            class="🌮"
+            src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/Name%20Banner.png?v=1651016729859"
+            alt="The Taco Stand"
+        /></a>
+      </div>
     </header>
-    <main>MAIN CONTENT</main>
+    <main>
+      <iframe frameborder="0" src="https://itch.io/embed-upload/2301967?color=f9d2fe" allowfullscreen="" width="300vw" height="300vw"><a href="https://quintuple.itch.io/moobys-misadventure">If you are see this, unfortunetly your browser cant handle my game... bummer :(</a></iframe></main>
     <footer>
-      <p>
-        Copyright ©
-        <script>
-          document.write(new Date().getFullYear());
-        </script>
-        NAME All Rights Reserved
-      </p>
+      <div class="🍗">
+        <p class="copyright">
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          Pedro M. Gonzalez All Rights Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
