--- a/port.html
+++ b/port.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/porticon?v=1651622942036"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,6 +31,7 @@
     </header>
     <main>
       <h1 class="🍏">MY PORTFOLIO!</h1>
+      <h2 class="🍎">Look Around! Stay A While!</h2>
       <div id="gallery" style="margin-top: 70px">
         <img
           src="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/ADAM_FEUTS.png?v=1652822388544"
