--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>About Me! - And Other Facts</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016" />
+    <link rel="icon" type="image/png" href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/aboutmeicon?v=1651622943465" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
