🙋📺 Checkpoint ./game.html:41497361/5515 ./styles.css:41497361/396

--- a/game.html
+++ b/game.html
@@ -5,7 +5,11 @@
     <title>Mooby's Misadventures</title>
     <meta name="description" content="The main page" />
     <meta name="author" content="Pedro M. Gonzalez" />
-    <link rel="icon" type="image/png" href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.glitch.global/7991a611-6cc7-4f4e-9079-fe77ce4bc020/moobyicon?v=1651622948936"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,7 +30,26 @@
       </div>
     </header>
     <main>
-      <iframe frameborder="0" src="https://itch.io/embed-upload/2301967?color=f9d2fe" allowfullscreen="" width="300vw" height="300vw"><a href="https://quintuple.itch.io/moobys-misadventure">If you are see this, unfortunetly your browser cant handle my game... bummer :(</a></iframe></main>
+      <h1 class="🍏">MOOBY'S MISADVENTURE!</h1>
+      <div class="wrapper">
+        <div class="h_iframe">
+          <iframe
+            frameborder="0"
+            src="https://itch.io/embed-upload/2301967?color=f9d2fe"
+            allowfullscreen=""
+            width="2"
+            height="2"
+            ><a
+              href="https://quintuple.itch.io/moobys-misadventure"
+              class="selfie2"
+              >If you are see this, unfortunetly your browser cant handle my
+              game... bummer :(</a
+            ></iframe
+          >
+        </div>
+      </div>
+    </main>
+
     <footer>
       <div class="🍗">
         <p class="copyright">
